fix: z-index bug

--- a/src/components/AccountPage/AccountPage.css
+++ b/src/components/AccountPage/AccountPage.css
@@ -6,7 +6,6 @@
   align-items: center;
   overflow-y: auto;
   position: relative;
-  overflow: visible;
 
 }
 
@@ -64,6 +63,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
 }
 
 .chart-title-day {
@@ -106,7 +106,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 7rem;
+  height: 6rem;
   color: #D0694B;
 
 }
