--- a/src/components/CommonComponents/Header/Header.css
+++ b/src/components/CommonComponents/Header/Header.css
@@ -5,7 +5,7 @@
     overflow-y: scroll;
     position: fixed;
     top: 0;
-    
+    z-index: 999;
 
     .factory-list {
         padding: 0;
